conformance/tests/httproute-invalid-backendref-nonexistent.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-nonexistent-backend-ref
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: nonexistent
      namespace: gateway-conformance-infra
      port: 8080
